# FastFourier

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: FastFourier.h
src/: FastFourier.cpp
